@@ -6,5 +6,6 @@ RewriteRule ^remove$ remove.php [L]
 RewriteRule ^search$ search.php [L]
 RewriteRule ^queue$ queue.php [L]
 RewriteRule ^control$ control.php [L]
+RewriteRule ^cover/(.*)/(.*)$ cover.php?artist=$1&album=$2 [L]
 RewriteRule ^disabled$ disabled.php [L]
 RewriteRule ^disabled/status$ disabled.php?json=1 [L]
